--- a/style.css
+++ b/style.css
@@ -316,7 +316,7 @@ body {
 }
 
 .main_case_box_1 {
-  background-image: url("../source/img/case/multimarket.png");
+  background-image: url("source/img/case/multimarket.png");
   background-repeat: no-repeat;
   position: relative;
   background-position: center;
