--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ body {
 }
 
 .main_banner_container_right {
-  background-image: url("../source/img/fon_formi.png");
+  background-image: url("source/img/fon_formi.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
@@ -490,7 +490,7 @@ input:checked + .label_checkbox:before {
 }
 
 .main_case_box_1 {
-  background-image: url("../source/img/case/ADENT.BY.png");
+  background-image: url("source/img/case/ADENT.BY.png");
   background-repeat: no-repeat;
   position: relative;
   background-size: cover;
@@ -503,7 +503,7 @@ input:checked + .label_checkbox:before {
 }
 
 .main_case_box_2 {
-  background-image: url("../source/img/case/FOXBAT.png");
+  background-image: url("source/img/case/FOXBAT.png");
   background-repeat: no-repeat;
   position: relative;
   background-size: cover;
@@ -528,7 +528,7 @@ input:checked + .label_checkbox:before {
 }
 
 .main_case_box_3 {
-  background-image: url("../source/img/case/MULTIMARKET.BY.png");
+  background-image: url("source/img/case/MULTIMARKET.BY.png");
   background-repeat: no-repeat;
   position: relative;
   background-size: cover;
@@ -553,7 +553,7 @@ input:checked + .label_checkbox:before {
 }
 
 .main_case_box_4 {
-  background-image: url("../source/img/case/Lstandard.png");
+  background-image: url("source/img/case/Lstandard.png");
   background-repeat: no-repeat;
   position: relative;
   background-size: cover;
@@ -578,7 +578,7 @@ input:checked + .label_checkbox:before {
 }
 
 .main_case_box_5 {
-  background-image: url("../source/img/case/BRELKI_OBLOZHKI.png");
+  background-image: url("source/img/case/BRELKI_OBLOZHKI.png");
   background-repeat: no-repeat;
   position: relative;
   background-size: cover;
