--- a/style.css
+++ b/style.css
@@ -175,12 +175,14 @@ body {
 .main_banner {
   width: 1180px;
   margin: 0 auto;
-  height: 100%;
+  height: 650px;
 }
 
 .main_banner_container_left {
   width: 40%;
-  height: 100vh;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .main_banner_container_left p {
   font-weight: 800;
@@ -195,7 +197,7 @@ body {
 
 .banner_husky {
   position: relative;
-  height: 84%;
+  height: 550px;
   padding-left: 40px;
 }
 
@@ -204,16 +206,16 @@ body {
   height: 450px;
   z-index: 1;
   left: 270px;
-  top: 220px;
+  top: 240px;
 }
 
 .main_banner_container_right {
-  background-image: url("source/img/fon_formi.png");
+  background-image: url("../source/img/fon_formi.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
   width: 60%;
-  height: 100vh;
+  height: 100%;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -221,7 +223,7 @@ body {
 .main_banner_box {
   width: 59%;
   margin-left: 110px;
-  margin-top: 150px;
+  margin-top: 180px;
 }
 
 .main_banner_text {
@@ -262,10 +264,10 @@ body {
   position: absolute;
   z-index: 3;
   right: 550px;
-  top: 470px;
+  top: 530px;
 }
 .main_banner_arrow img {
-  height: 205px;
+  height: 220px;
   width: auto;
 }
 
@@ -336,6 +338,7 @@ input:checked + .label_checkbox:before {
   font-family: "icomoon";
   background-color: #42217a;
 }
+
 
 /* Услуги */
 .main_wrap_color {
